MiddleWare/nacos/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nacos-ingress
  namespace: middleware
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: nacos.paynewu.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: nacos-service
                port:
                  number: 8848
